--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>APBA-TRABL League</title>
+ <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
+
+    
   </head>
   <body style="background-color: #FFFBE9;" >
     <table>
