--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Team Transactions</title>
+ <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
+  
 </head>
 
 <body style=backgroundcolor: #FFFBE9;">
