--- a/teambattingstats.html
+++ b/teambattingstats.html
@@ -28,6 +28,24 @@
 <h2><strong><center>Catchers</center></strong></h2>
 <hr>
 
+
+<h3><strong>Ivan Herrera</strong></h3>
+
+<table>
+  <tr>
+    <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/1/1028ff5b_mlbam.jpg" alt=""></td>
+    <td>
+
+<div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-soc-sum-scope-type="player_season" data-soc-sum-phase-type="reg" data-soc-sum-table-type="Batting::BattingStandard" data-soc-sum-entity-id="herrer002iva" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;"> <caption>Standard Batting Table</caption> <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup> <thead> <tr> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Season</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Team</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WAR</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th> <th scope="col" data-filter="1" data-name="" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">rOBA</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Rbat+</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GIDP</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Pos</th> <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Awards</th> </tr> </thead> <tbody> <tr> <th scope="row" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/players/gl.fcgi?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool&amp;id=herreiv01&amp;t=b&amp;year=2024">2024</a></th> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">24</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/STL/2024.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">STL</a></td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2024.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td> <td csk="1.71" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.7</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">72</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">259</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">229</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">37</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">69</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">12</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">27</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">25</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">53</td> <td csk="0.3013100437" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.301</td> <td csk="0.3720930233" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.372</td> <td csk="0.4279475983" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.428</td> <td csk="0.8000406215" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.800</td> <td csk="123.9669209230" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">124</td> <td csk="0.361770000000000" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.362</td> <td csk="128.837682141647" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">129</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">98</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2D/H</td> <td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "></td> </tr> </tbody> <tfoot> </tfoot> </table><div id="credit_players_standard_batting" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/h/herreiv01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#players_standard_batting">View Original Table</a><br>Generated 12/6/2024.</div>
+
+<br>
+<br>
+
+</td>
+</tr>
+</table>
+
 <h3><strong>Austin Nola</strong></h3>
 
 <table>
@@ -84,71 +102,8 @@
 </tr>
 </table>
 <br>
-
-
-
-
-<h3><strong>Ivan Herrera</strong></h3>
-
-
-<table>
-  <tr>
-    <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/1/1028ff5b_mlbam.jpg" alt=""></td>
-    <td>
-
-
-
-
-<div class="sr_share_wrap" style="overflow:auto">
-<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-    <caption>Standard Batting</caption>
-   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-   <thead>
-      <tr>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-         <th scope="col" data-filter="1" data-name="Batting Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th>
-         <th scope="col" data-filter="1" data-name="On-Base%" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th>
-         <th scope="col" data-filter="1" data-name="Slugging %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th>
-         <th scope="col" data-filter="1" data-name="On-Base Plus Slugging" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GDP</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-      </tr>
-      </thead>
-<tbody>
-<tr><th scope="row" csk="2023" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2023</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/STL/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="St. Louis Cardinals">STL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">13</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">44</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">37</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">11</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">11</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.297</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.409</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.351</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.760</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">112</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">13</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td></tr>
-</tbody><tfoot>
-   </tfoot>
-</table><div id="credit_batting_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/h/herreiv01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#batting_standard">View Original Table</a><br>Generated 11/19/2023.</div>
-
-<br>
-<br>
-
-</td>
-</tr>
-</table>
-
-<h3><strong>Cesar Salazar</strong></h3>
+    
+    <h3><strong>Cesar Salazar</strong></h3>
 
 
 <table>
